Final Project Ideas

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -29,25 +29,25 @@
 Here are at most 3 ideas for my final project
 <p class = "margin"></p>
 
-<h4>Idea 1 : [INSERT IDEA 1]</h4>
+<h4>Idea 1 : Robotic Accompaniment </h4>
 <p class = "margin"></p>
 
-Idea 1 description
-
-<p class = "margin"></p>
-
-
-<h4>Idea 2: [INSERT IDEA 2]</h4>
-<p class = "margin"></p>
-
-Idea 2 Description
+I'd be interested in a device that could work as a musical brainstorming assistant. The final product would hopefully involve an exchange like this. The user provides a rhythm or simply taps at a certain bpm. Based on this, the robot will attempt to identify a song that matches and then plays the accompaniment to that song. I'm considering a kalimba or other small strumming instrument that the user is then encouraged to sing along to.
 
 <p class = "margin"></p>
 
-<h4>Idea 3: [INSERT IDEA 3]</h4>
+
+<h4>Idea 2: Slap Cup/Bell Game </h4>
 <p class = "margin"></p>
 
-Idea 3 Description
+In this game the user is set to play against a CPU using a robotic arm in order to play a slap cup/bell game. In the game a cup is placed over a bell between two people, the players must then take turns either tapping or lifting the cup one after the other. If one slips up and taps the bell under the cup, they lose.
+
+<p class = "margin"></p>
+
+<h4>Idea 3: Handheld Icebreaker </h4>
+<p class = "margin"></p>
+
+I would like to introduce a handheld version of an icebreaker game. This game involves a circle of people in which a person must receive an invisible ball from someone else in the circle, the two people on either side must mimic a chopping motion at the receiver, and the ball must be "thrown" to someone else. In the handheld version, the user would be represented by a bottom light forming a circle with other lights representing players. A series of lines that may light up between each person would represent a throw, and the player must have quick reaction times to either receive the ball and throw it, or "chop" for a player that has received the ball next to them.
 
 
 
