Adjustments to Final Project Ideas

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -29,10 +29,10 @@
 Here are at most 3 ideas for my final project
 <p class = "margin"></p>
 
-<h4>Idea 1 : Robotic Accompaniment </h4>
+<h4>Idea 1: Robotic Accompaniment </h4>
 <p class = "margin"></p>
 
-I'd be interested in a device that could work as a musical brainstorming assistant. The final product would hopefully involve an exchange like this. The user provides a rhythm or simply taps at a certain bpm. Based on this, the robot will attempt to identify a song that matches and then plays the accompaniment to that song. I'm considering a kalimba or other small strumming instrument that the user is then encouraged to sing along to.
+I'd be interested in a device that could work as a musical brainstorming assistant. The final product would hopefully involve an exchange like this: The user provides a rhythm or simply taps at a certain bpm. Based on this, the robot will attempt to identify a song that matches and then plays the accompaniment to that song. I'm considering a kalimba or other small strumming instrument that the user is then encouraged to sing along to.
 
 <p class = "margin"></p>
 
@@ -40,7 +40,7 @@ I'd be interested in a device that could work as a musical brainstorming assista
 <h4>Idea 2: Slap Cup/Bell Game </h4>
 <p class = "margin"></p>
 
-In this game the user is set to play against a CPU using a robotic arm in order to play a slap cup/bell game. In the game a cup is placed over a bell between two people, the players must then take turns either tapping or lifting the cup one after the other. If one slips up and taps the bell under the cup, they lose.
+In this game the user is set to play against a CPU using a robotic arm in order to play a slap cup/bell game. In the game a cup is placed over a bell between two people, the players must then take turns either slapping or lifting the cup one after the other. If one slips up and slaps the bell under the cup, they lose the exchange.
 
 <p class = "margin"></p>
 
