Fourth Final Project Idea

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -49,6 +49,13 @@ In this game the user is set to play against a CPU using a robotic arm in order 
 
 I would like to introduce a handheld version of an icebreaker game. This game involves a circle of people in which a person must receive an invisible ball from someone else in the circle, the two people on either side must mimic a chopping motion at the receiver, and the ball must be "thrown" to someone else. In the handheld version, the user would be represented by a bottom light forming a circle with other lights representing players. A series of lines that may light up between each person would represent a throw, and the player must have quick reaction times to either receive the ball and throw it, or "chop" for a player that has received the ball next to them.
 
+<p class = "margin"></p>
+
+<h4>Idea 4: Greedy Controller </h4>
+<p class = "margin"></p>
+
+I've been interested in the idea of crafting something for myself in a way that has been personalized to my own needs such that its specificity would not help many people. From this, I'm tempted to make a controller mold (most likely for Nintendo Switch 2 Joycons) that is perfectly shaped for my hands in a way that is comfortable to me but is too accurate to serve other users.
+
 
 
 </div>
