--- a/about.html
+++ b/about.html
@@ -28,25 +28,25 @@
 
 <p class="margin">   </p>
 <div class="center-row">
-  <img src="./about-me-placeholder.jpg" alt="placeholder for you about me image">
+  <img src="./about-me.jpg" alt="about me image">
   <p id="aboutme">
-    This is an about me! Here you can talking about the dorm you live in, what year you are, and what are you interested in.
+    Hello! My name is Christopher Lapop and I'm currently a Harvard Graduate from the year of 2025. I graduated with a double concentration in Computer Science and Music. This summer I'm continuing my work as a mentor for the Crimson Summer Academy, and I'm staying in Quincy House.
   </p>
 </div>
 <br></br>
 
-Hello there is more text here, feel free to go into more detail about stuff you are interested in as well. As well as place more
-images if you are interested in those things
-<br></br>
-<img src="./generic-placeholder-image.jpg" alt="generic placeholder image">
+One of my greatest experiences at Harvard has been being part of the Harvard Glee Club, where I sang as part of the Tenor I section. As part of the Glee Club, I've toured across Florida, Dominican Republic, London, Paris, Milan, Florence, Rome, Munich, Lisbon, and New York.
 
 <br></br>
-Maybe even add a video?
+<img src="./image.jpg" alt="image">
+
+<br></br>
+Here's my most recent Computer Science project video:
 <br></br>
 
-<video width="640" height="480" controls>
-  <source src="temp-video.mp4" type="video/mp4">
-</video>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/iCEkSeTsOZM">
+</iframe>
 
 
 </div>
