--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 One of my greatest experiences at Harvard has been being part of the Harvard Glee Club, where I sang as part of the Tenor I section. As part of the Glee Club, I've toured across Florida, Dominican Republic, London, Paris, Milan, Florence, Rome, Munich, Lisbon, and New York.
 
 <br></br>
-<img src="./image.jpg" alt="image">
+<img src="./image.jpg" width="716" height="537" alt="image">
 
 <br></br>
 Here's my most recent Computer Science project video:
