--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -25,24 +25,57 @@
 
 <h3>Week 2: 2D Design & Cutting</h3>
 
+
+<h4>Assignment 1: Make a Box</h4>
+
+<img src="./boxsketch.png" width="716" height="537" alt="box sketches">
+<img src="./boxbodies.png" width="716" height="537" alt="box bodies">
+<img src="./boxflats.png" width="716" height="537" alt="box flats">
+<img src="./box1.jpg" width="716" height="537" alt="first image of the complete box">
+<img src="./box2.jpg" width="716" height="537" alt="second image of the complete box">
+
 <p class="margin">   </p>
 <div class="flexrow">
-  <a id="btn" href="./temp.zip" download>Test Download Button
+  <a id="btn" href="./box.zip" download>Box Download
   </a>
 </div>
 <p class="margin">   </p>
 
-<h4>Assignment 1: Make a Box</h4>
-
-
 
 <h4>Assignment 2: Fusion 360 Tutorial</h4>
+
+<img src="./toyblock1.png" width="716" height="537" alt="first image of toyblock">
+<img src="./toyblock2.png" width="716" height="537" alt="second image of toyblock">
+
+<p class="margin">   </p>
+<div class="flexrow">
+  <a id="btn" href="./toyblock.zip" download>Tutorial Results Download
+  </a>
+</div>
+<p class="margin">   </p>
 
 
 <h4>Assignment 3: Fusion Modeling</h4>
 
+<img src="./usb1.png" width="716" height="537" alt="first image of Mouse USB">
+<img src="./usb2.png" width="716" height="537" alt="second image of Mouse USB">
 
+<p class="margin">   </p>
+<div class="flexrow">
+  <a id="btn" href="./usb.zip" download>Model 1 Download
+  </a>
+</div>
+<p class="margin">   </p>
 
+<img src="./battery1.png" width="716" height="537" alt="first image of AA battery">
+<img src="./battery2.png" width="716" height="537" alt="second image of AA battery">
+
+<p class="margin">   </p>
+<div class="flexrow">
+  <a id="btn" href="./battery.zip" download>Model 2 Download
+  </a>
+</div>
+<p class="margin">   </p>
 
 
 </div>
