--- a/04_microcontroller/index.html
+++ b/04_microcontroller/index.html
@@ -27,9 +27,12 @@
 
 <h4>[Do Something with an arduino]</h4>
 
-
-
-
+<p class="margin">   </p>
+<div class="flexrow">
+  <a id="btn" href="./rhythm_keeping.zip" download>Arduino program draft
+  </a>
+</div>
+<p class="margin">   </p>
 
 </div>
 </xmp>
