--- a/04_microcontroller/index.html
+++ b/04_microcontroller/index.html
@@ -25,14 +25,15 @@
 
 <h3>Week 4: Microcontroller Programming</h3>
 
-<h4>[Do Something with an arduino]</h4>
-
 <p class="margin">   </p>
 <div class="flexrow">
   <a id="btn" href="./rhythm_keeping.zip" download>Arduino program draft
   </a>
 </div>
 <p class="margin">   </p>
+
+<img src="./rhythmkeepdisplay.gif" width="716" height="537" alt="rhythm keeping console">
+<img src="./rhythmkeepboard.gif" width="716" height="537" alt="rhythm keeping board">
 
 </div>
 </xmp>
