--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -37,9 +37,18 @@
 </a>
 
 <p class="margin">   </p>
+<img src="./pythagorascup1.jpg" width="537" height="716" alt="pythagoras cup front view">
+<img src="./pythagorascup2.jpg" width="537" height="716" alt="pythagoras cup bottom view">
+<img src="./pythagorascup3.jpg" width="537" height="716" alt="pythagoras cup inner view">
+
+<p class="margin">   </p>
 <a id="btn" href="./ChristopherLapopSalazarPlush.zip" download>Revopoint Plush Scan
 </a>
 
+<p class = "margin"></p>
+<img src="./plushscanning.jpg" width="716" height="537" alt="Initial Plush scan">
+
+<p class = "margin"></p>
 <h4>Final Project updates </h4>
 <p class = "margin"></p>
 
