--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -26,7 +26,11 @@
 <h3>Week 3: Hand Tools and Fabrication</h3>
 
 <h4>Kinetic Sculpture</h4>
+<p class = "margin"></p>
 
+Assignment still a work in progress but I'll be providing an update for clarity's sake. This is the assignment I've most struggled with after brainstorming for too long and not getting started on creating the sculpture. At the moment I would like to coil a wire (similar to the wire in a clothes hanger) and tighten one end of it to a motor. Then I would thread the wire through pieces of horizontally fixed cardboard. This would result in the cardboard pieces rising and falling in sequence.
+
+<p class = "margin"></p>
 
 
 
