--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -54,7 +54,13 @@
 
 At the moment I'm confident that I've whittled down my options to ideas 1 and 3. While idea 1 has value in developing a program that focuses on information gathering and interpretation, idea 3 is more involved in the game-development track.
 
+<p class = "margin"></p>
+
 If I can find both an effective print of a kalimba over this weekend as well as a speaker compatible with the microcontroller, I'm interested in going for idea 1. Otherwise, I will begin and hopefully complete the casing for idea 3 this weekend.
+
+<p class = "margin"></p>
+
+Update after a conversation with a TA: I will be committing to idea 3, and have the general casing design ready. I still have some final decisions to make with the form of the LEDs I'll be using in order to mark the "flight path" between different 6 different "players." However, the microcontroller program should be a high priority for the minimum viable product.
 
 <p class = "margin"></p>
 
