--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -27,7 +27,19 @@
 
 <h4>Assignment 1: Capactive Sensor<h4>
 
+<p class = "margin"></p>
+
+I'm most interested in making use of an electromagnetic sensor, but I have some concepts to review before doing so.
+
+<p class = "margin"></p>
+
 <h4>Assignment 2: [Use + Calibrate Another Sensor]</h4>
+
+<p class = "margin"></p>
+
+Have not started, will also have to review concepts.
+
+<p class = "margin"></p>
 
 </div>
 </xmp>
