--- a/07_outputs/index.html
+++ b/07_outputs/index.html
@@ -29,6 +29,15 @@
 
 <h4>Assignment: Minimum Viable Product for Final Project</h4>
 
+<p class = "margin"></p>
+
+Fusion model implements the shape and a first attempt at an enclosed shape. I've modified from using a snapping lid to a fix I found in the way simple "stakes" could fit in with the corners used to hold the microcontroller. However, my ideas for the different possible light-related displays are still clashing and I'm unsure whether to print the shell's lid to test the case's fitting or decide the LED arrangement first.
+
+<p class = "margin"></p>
+
+<img src="./casebase.png" width="716" height="537" alt="Final Project Bottom of Case">
+<img src="./caselid.png" width="716" height="537" alt="Final Project Top of Case">
+
 
 </div>
 </xmp>
