CNC + General Updates

--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -29,7 +29,7 @@
 
 <p class = "margin"></p>
 
-I'm most interested in making use of an electromagnetic sensor, but I have some concepts to review before doing so.
+Have not started, will also have to review concepts.
 
 <p class = "margin"></p>
 
@@ -37,7 +37,31 @@ I'm most interested in making use of an electromagnetic sensor, but I have some 
 
 <p class = "margin"></p>
 
+I'm most interested in making use of an electromagnetic sensor, but I have some concepts to review before doing so.
+
+<p class = "margin"></p>
+
+<h4>Assignment 3: Schematics of Each Sensor</h4>
+
+<p class = "margin"></p>
+
 Have not started, will also have to review concepts.
+
+<p class = "margin"></p>
+
+<h4>Assignment 4: Calibrate each sensor</h4>
+
+<p class = "margin"></p>
+
+Have not started, will also have to review concepts.
+
+<p class = "margin"></p>
+
+<h4>Assignment 5: Plan for CNC assignment</h4>
+
+<p class = "margin"></p>
+
+At its earliest, I initially planned to recreate a small model of a keyboard. This would involve using the revopoint scanner to scan a 3d model of a keyboard, before scaling it down to a size appropriate for the CNC machine. However, there were troubles scanning the keyboard due to its dark color, shiny finishes and flat shape. I was later recommended to focus on a something smaller, pivoting to a single keycap.
 
 <p class = "margin"></p>
 
