--- a/07_outputs/index.html
+++ b/07_outputs/index.html
@@ -35,6 +35,10 @@ Fusion model implements the shape and a first attempt at an enclosed shape. I've
 
 <p class = "margin"></p>
 
+I've later updated my initial approach to focus more on the microcontroller code side where I hope to create a prototype of LEDs poking through a piece of paper just to ensure that the behavior of the microcontroller is proper. This would appear as a sequence of LEDs lighting up, representing a "motion" from one corner of the hexagon to another.
+
+<p class = "margin"></p>
+
 <img src="./casebase.png" width="716" height="537" alt="Final Project Bottom of Case">
 <img src="./caselid.png" width="716" height="537" alt="Final Project Top of Case">
 
