--- a/08_cnc/index.html
+++ b/08_cnc/index.html
@@ -26,6 +26,35 @@
 <h3>Week 8: CNC Milling</h3>
 
 <h4>Assignment: Make Something With CNC</h4>
+<p class = "margin"></p>
+
+Based on the previous assigment's section on planning the CNC project, I had the idea to CNC the positive of a keycap with a design of my choice extruding from the top. I would then pour a silicone mold from it which could be used to pour positives of the designed keycap.
+
+<p class = "margin"></p>
+
+I went through three attempts to create the positive silicone mold, all using the SRM-20 on a block of wax. I found it to be most effective due to the potential of pouring a silicone mold into the design and the scale of the project being reserved to a single keycap. 
+
+<p class = "margin"></p>
+
+<img src="./v1 and v2.jpg" width="716" height="537" alt="attempt 1 and attempt 2">
+
+<p class = "margin"></p>
+
+The first attempt was completed by having the top view and bottom view of the keycap placed within two containers, each with a wall of 3mm. Of the three designs this one was noticable in that the entire cut was completed using a single drillbit, which I assume was 1/16. No issues arose from the cut, with the only issue resulting from a cut on the "back" of the top view keycap where the drill bit did not drill to the "floor." After the cut, I still gave the silicone mold an attempt, noting that on a second attempt I would like to give additional flat space around the keycap. While it served as a solid prototype, the incomplete cut that didn't reach the floor left a window on the side of the top keycap mold. This results in an ineffective mold for the positive keycap.
+
+<p class = "margin"></p>
+
+On the second attempt I became familiar with the process of switching drillbits, beginning with a 1/8 roughing before a 1/16 cutting. And while I did include wider margins, I ran into the problem of the drillbit attempting to enter spaces that the tip of the drillbit can enter, but the thicker part cannot. It caused an issue where the drill desynced and embedded itself and ripped the wax block from the base. While it only got through the full roughing process I decided to create a silicone mold in hopes that I could see whether the wider margins worked.
+
+<p class = "margin"></p>
+
+Unfortunately, a second issue arose from this silicone mold attempt. While it was still would have been a solid second prototype, I did not properly mix the A and B to produce the silicone mold, and it was done intentionally, although a mistake. The reason for this is because the first time I made a silicone mold I was concerned for the number of bubbles that came from a proper mixing and attempted to mix it minimally. Instead, the liquid remained in the mold and semi-solidified which resulted in the wax block being thrown out.
+
+<p class = "margin"></p>
+
+On the third attempt the design was adjusted, given sloping walls to allow the drillbit to work without disturbing desyncronizations. At this current time, the silicone has been well mixed and poured into the wax block but I have yet to return to the lab.
+
+<p class = "margin"></p>
 
 </div>
 </xmp>
