--- a/08_cnc/index.html
+++ b/08_cnc/index.html
@@ -52,7 +52,19 @@ Unfortunately, a second issue arose from this silicone mold attempt. While it wa
 
 <p class = "margin"></p>
 
-On the third attempt the design was adjusted, given sloping walls to allow the drillbit to work without disturbing desyncronizations. At this current time, the silicone has been well mixed and poured into the wax block but I have yet to return to the lab.
+On the third attempt the design was adjusted, given sloping walls to allow the drillbit to work without disturbing desyncronizations. I also made sure to properly mix it without overdoing it or minding the air bubbles too much. Luckily, it's worked well and produced a finer wax cut without an emergency milling stop. The mold produced is clear and shows what the positive would look like when plaster is poured into the negative mold.
+
+<p class = "margin"></p>
+
+<img src="./cut and mold.jpg" width="716" height="537" alt="attempt 3">
+
+<p class = "margin"></p>
+
+<img src="./topside.jpg" width="537" height="716" alt="mold topside">
+
+<p class = "margin"></p>
+
+<img src="./underside.jpg" width="537" height="716" alt="mold underside">
 
 <p class = "margin"></p>
 
