Prior to Shop Day Updates pt. 1

--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -32,6 +32,26 @@ Assignment still a work in progress but I'll be providing an update for clarity'
 
 <p class = "margin"></p>
 
+An Update! I've currently gotten my hands on both the motor and wire necessary for the project's internal motion and the small code necessary for the project to work.
+
+<p class = "margin"></p>
+
+Program: 
+
+<p class = "margin"></p>
+
+Working coil motion:
+
+<p class = "margin"></p>
+
+Cardboard to be laser cut for the project's externals:
+
+<p class = "margin"></p>
+
+All that is left is a visit to the shop for some externals and fine tuning.
+
+<p class = "margin"></p>
+
 
 
 </div>
