--- a/07_outputs/index.html
+++ b/07_outputs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
+<title>PHYS S-12: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">PHYS S-12 Summer 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -31,16 +31,38 @@
 
 <p class = "margin"></p>
 
-Fusion model implements the shape and a first attempt at an enclosed shape. I've modified from using a snapping lid to a fix I found in the way simple "stakes" could fit in with the corners used to hold the microcontroller. However, my ideas for the different possible light-related displays are still clashing and I'm unsure whether to print the shell's lid to test the case's fitting or decide the LED arrangement first.
+When I first began to approach my minimal viable product, I hoped to form the externals of my project. I will still include my initial brainstorm for the project's externals but then pivot to the appropriate preparation involved in the project's microcontroller code, and internals.
 
 <p class = "margin"></p>
 
-I've later updated my initial approach to focus more on the microcontroller code side where I hope to create a prototype of LEDs poking through a piece of paper just to ensure that the behavior of the microcontroller is proper. This would appear as a sequence of LEDs lighting up, representing a "motion" from one corner of the hexagon to another.
+Early on in the process, I was interested in providing a non-traditional console shape, and decided that I would trial and model a shell for the console while reserving the space the microcontroller would need on the breadboard.
+
+<p class = "margin"></p>
+
+Since I was familiar with many consoles that were made of much more stable materials than cardboard but was intimidated by the prospect of cutting and assembling a material like acryllic, I was interested in making a 3d print. It would allow me to make the pieces fit together with little setup. I was also interested in making a snap fit lid in order to make a satisfying and stable removal of the top cover when working on the internals.
 
 <p class = "margin"></p>
 
 <img src="./casebase.png" width="716" height="537" alt="Final Project Bottom of Case">
 <img src="./caselid.png" width="716" height="537" alt="Final Project Top of Case">
+
+<p class = "margin"></p>
+
+However, I transitioned to making a stable cover using the setup that I'd made for holding the breadboard. But while I was satisfied by the appearance of the box's model in Fusion, I was met with two problems. The first of the two was that the size of a hexagonal console made for an intimidating 3d print build, threatening a waste of filament and wasted time building the console's shell. The second was that it was heavily conditioned on a set of internals and the associated LED positions that I didn't have set in stone yet. 
+
+<p class = "margin"></p>
+
+In the end, I've pivoted focusing on the internals of the console, as well as the microcontroller's programming. That way I can determine what types of space I might want to reserve on the top of the console's shell for the LEDs and buttons. While I might form a prototype by preparing to arrange LEDs through a piece of paper, the final project may have to take form in the shape of a cardboard case, which I'm not opposed to now.
+
+<p class = "margin"></p>
+
+The following is significant progress in setting the relevant transitionary LED toggling at each step of the game. This alongside some simple randomness and simpler LED corner transitions should produce a polished game.
+
+<p class = "margin"></p>
+
+Here is progress on the cardboard case to be printed for the console's shell:
+
+<p class = "margin"></p>
 
 
 </div>
