Pre-Fusion Model Updates

--- a/07_outputs/index.html
+++ b/07_outputs/index.html
@@ -58,12 +58,11 @@ In the end, I've pivoted focusing on the internals of the console, as well as th
 
 The following is significant progress in setting the relevant transitionary LED toggling at each step of the game. This alongside some simple randomness and simpler LED corner transitions should produce a polished game.
 
-<p class = "margin"></p>
-
-Here is progress on the cardboard case to be printed for the console's shell:
-
-<p class = "margin"></p>
-
+<p class="margin">   </p>
+<div class="flexrow">
+  <a id="btn" href="./light_pathing.zip" download>Arduino Program
+  </a>
+</div>
 
 </div>
 </xmp>
