--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./question.png" alt = "assignment completion"> </image>
+      <image style = "width: 75%"src = "./exclamation.png" alt = "assignment completion"> </image>
       <br>[Machine Building](./10_machine/index.html)
     </div>
     <div class="col-sm-4">
