--- a/04_microcontroller/index.html
+++ b/04_microcontroller/index.html
@@ -27,7 +27,7 @@
 
 <p class="margin">   </p>
 <div class="flexrow">
-  <a id="btn" href="./rhythm_keeping.zip" download>Arduino program draft
+  <a id="btn" href="./rhythm_keeping.zip" download>Arduino Program
   </a>
 </div>
 <p class="margin">   </p>
