--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <br>[Week 1: Intro](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./exclamation.png" alt = "assignment completion status"> </image>
+      <image style = "width: 75%"src = "./yes.png" alt = "assignment completion status"> </image>
       <br>[Week 2: 2D Design](./02_2Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./no.png" alt = "assignment completion status"> </image>
+      <image style = "width: 75%"src = "./yes.png" alt = "assignment completion status"> </image>
       <br>[Week 3: Fabrication](./03_fabrication/index.html)
     </div>
   </div>
@@ -44,7 +44,7 @@
       <br>[Week 4: Programming](./04_microcontroller/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./exclamation.png" alt = "assignment completion status"> </image>
+      <image style = "width: 75%"src = "./yes.png" alt = "assignment completion status"> </image>
       <br>[Week 5: 3D Design](./05_3Ddesign/index.html)
     </div>
     <div class="col-sm-4">
@@ -54,11 +54,11 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./no.png" alt = "assignment completion status"> </image>
+      <image style = "width: 75%"src = "./yes.png" alt = "assignment completion status"> </image>
       <br>[Week 7: Outputs](./07_outputs/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./exclamation.png" alt = "assignment completion status"> </image>
+      <image style = "width: 75%"src = "./yes.png" alt = "assignment completion status"> </image>
       <br>[Week 8: CNC](./08_cnc/index.html)
     </div>
     <div class="col-sm-4">
@@ -68,7 +68,7 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./exclamation.png" alt = "assignment completion"> </image>
+      <image style = "width: 75%"src = "./yes.png" alt = "assignment completion"> </image>
       <br>[Machine Building](./10_machine/index.html)
     </div>
     <div class="col-sm-4">
